--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home3/karmanap/azhagym.karmanapp.ir/
+    - export DEPLOYPATH=/home3/karmanap/azhagym.karmanapp.ir
     - /bin/cp * $DEPLOYPATH
